<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:orientation="vertical" >

        <com.example.cropimage.CropImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/background_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/rotateLeft"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_rotate_left"
                android:text="@string/crop_image_turn_left" />

            <ImageButton
                android:id="@+id/rotateRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_rotate_right"
                android:text="@string/crop_image_turn_right" />

            <ImageButton
                android:id="@+id/discard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_cancel"
                android:text="@string/crop_image_cancel" />

            <ImageButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_save"
                android:text="@string/crop_image_save" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>